fix: products should align to center at mobile view

--- a/ekke-webshop-frontend/src/app/pages/products/products.component.scss
+++ b/ekke-webshop-frontend/src/app/pages/products/products.component.scss
@@ -1,12 +1,17 @@
 .main-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 30px;
   width: 100%;
   min-height: 100vh;
-  max-width: 1480px;
+  max-width: 1090px;
   margin: 0px auto;
-  padding: 50px 40px 0 60px;
+  padding-top: 50px;
+
+  @media (min-width: 1280px) {
+    justify-content: unset;
+  }
 }
 
 .product {
